feat: ES configuration
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>